@@ -71,105 +71,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- maven -->
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.version>3.8.0</maven.compiler.version>
-        <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
-        <maven.war.plugin.version>3.1.0</maven.war.plugin.version>
-        <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
-        <maven.jacoco.version>0.8.5</maven.jacoco.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
-        <maven.javadoc.version>3.2.0</maven.javadoc.version>
-        <maven-shade-plugin.version>2.3</maven-shade-plugin.version>
-
-        <!-- spring -->
-        <spring.boot.version>2.0.2.RELEASE</spring.boot.version>
-        <spring.data.jpa.version>2.0.7.RELEASE</spring.data.jpa.version>
-        <spring.security.test.version>5.0.5.RELEASE</spring.security.test.version>
-        <spring-cloud-config.version>2.0.0.RELEASE</spring-cloud-config.version>
-
-        <swagger.core.version>2.0.7</swagger.core.version>
-        <swagger.annotations.version>1.5.20</swagger.annotations.version>
-        <springfox.version>2.9.2</springfox.version>
-
-
-        <!-- javax -->
-        <javax.interceptor.version>1.2</javax.interceptor.version>
-        <javax.el-api.version>3.0.0</javax.el-api.version>
-        <javax.transaction.api.version>1.3</javax.transaction.api.version>
-        <javax.persistence.api.version>2.2</javax.persistence.api.version>
-        <javax.validation-api.version>2.0.1.Final</javax.validation-api.version>
-        <glassfish.javax.el>2.2.6</glassfish.javax.el>
-
-        <!-- data -->
-        <h2.version>1.4.197</h2.version>
-        <mysql.connector.version>5.1.46</mysql.connector.version>
-        <postgresql.version>42.2.2</postgresql.version>
-        <eclipselink.version>2.5.0</eclipselink.version>
-        <hibernate.version>5.2.17.Final</hibernate.version>
-        <hibernate.validator.version>6.0.12.Final</hibernate.validator.version>
-
-        <!-- test -->
-        <junit.version>4.12</junit.version>
-        <mockito.version>2.23.4</mockito.version>
-        <powermock.version>1.7.4</powermock.version>
-        <powermock.beta.version>2.0.7</powermock.beta.version>
-
-        <!-- logger -->
-        <logback.version>1.2.3</logback.version>
-        <slf4j.version>1.7.19</slf4j.version>
-        <jcl.to.slf4j.version>1.7.25</jcl.to.slf4j.version>
-
-        <!-- json -->
-        <jackson.version>2.9.5</jackson.version>
-        <jackson.datatype.version>2.9.8</jackson.datatype.version>
-        <jackson.databind>2.9.6</jackson.databind>
-        <json.utility.version>20180130</json.utility.version>
-        <json.schema.validator.version>2.2.10</json.schema.validator.version>
-        <json.version>20180813</json.version>
-
-        <!-- utilities -->
-        <commons-math3>3.6.1</commons-math3>
-        <commons-lang3>3.7</commons-lang3>
-        <commons-io>2.6</commons-io>
-        <commons-codec>1.11</commons-codec>
-        <commons.beanutils.version>1.9.2</commons.beanutils.version>
-        <commons.configuration2.version>2.2</commons.configuration2.version>
-        <apache.httpcomponents.version>4.5.6</apache.httpcomponents.version>
-        <guava.version>19.0</guava.version>
-        <lombok.version>1.18.8</lombok.version>
-        <jsch.version>0.1.54</jsch.version>
-        <sshd.version>1.4.0</sshd.version>
-        <itextcore.version>7.1.0</itextcore.version>
-        <itexthtml2pdf.version>2.0.0</itexthtml2pdf.version>
-        <itext.version>5.5.13</itext.version>
-        <freemarker.version>2.3.23</freemarker.version>
-        <velocity.version>1.7</velocity.version>
-        <velocity.tool.version>2.0</velocity.tool.version>
-        <datamapper.orika>1.5.2</datamapper.orika>
-        <modelmapper.version>2.1.1</modelmapper.version>
-        <bouncycastle.version>1.60</bouncycastle.version>
-        <icu4j.version>63.1</icu4j.version>
-        <seventeam-otp.version>1.0.0</seventeam-otp.version>
-        <google.zxing.version>3.3.3</google.zxing.version>
-        <hadoop-client>2.8.1</hadoop-client>
-        <htrace-core4>4.1.0-incubating</htrace-core4>
-        <aws.javasdk.version>1.11.368</aws.javasdk.version>
-        <s3mock.version>0.2.4</s3mock.version>
-        <ignite.version>2.3.0</ignite.version>
-        <findbugs.version>3.0.1</findbugs.version>
-        <byte.buddy.version>1.9.12</byte.buddy.version>
-        <io.jsonwebtoken.jjwt.version>0.6.0</io.jsonwebtoken.jjwt.version>
-        <apache.directory.api.version>2.0.0.AM2</apache.directory.api.version>
-        <google.gson.version>2.8.4</google.gson.version>
-        <googlecode.json-simple.version>1.1.1</googlecode.json-simple.version>
-        <powermock.beta.version>2.0.7</powermock.beta.version>
-        <mockito.version>2.22.0</mockito.version>
-        <io.micrometer.prometheus.version>1.4.2</io.micrometer.prometheus.version>
-
 
         <sonar.coverage.exclusions>
-            **/constant/**,**/config/**,**/httpfilter/**,**/cache/**,**/dto/**,**/entity/**,**/model/**,**/exception/**,**/repository/**,**/security/**,**/*Config.java,**/*BootApplication.java,**/*VertxApplication.java,**/cbeffutil/**,**/mock/**,**/OrderCard*
+            **/constant/**,**/config/**,**/httpfilter/**,**/cache/**,**/dto/**,**/entity/**,**/model/**,**/exception/**,**/repository/**,**/security/**,**/*Config.java,**/*BootApplication.java,**/*VertxApplication.java,**/cbeffutil/**,**/mock/**,**/OrderCard*,**/testrig/**
         </sonar.coverage.exclusions>
         <sonar.cpd.exclusions>**/dto/**,**/entity/**,**/config/**</sonar.cpd.exclusions>
     </properties>
@@ -177,17 +84,29 @@
     <modules>
         <module>resident-service</module>
     </modules>
-
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.mosip.kernel</groupId>
+                <artifactId>kernel-bom</artifactId>
+                <version>1.2.1-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jul-to-slf4j</artifactId>
-            <version>${jcl.to.slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
-            <version>${jcl.to.slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
         </dependency>
     </dependencies>
     <build>
@@ -195,38 +114,22 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven.surefire.plugin.version}</version>
                 <configuration>
                     <skipTests>${skipTests}</skipTests>
                     <skip>false</skip>
                     <argLine>
-                        ${argLine} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --illegal-access=permit
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.base/java.net=ALL-UNNAMED
+                        --add-opens=java.base/java.time=ALL-UNNAMED
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-opens=java.base/java.time.format=ALL-UNNAMED
                     </argLine>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${maven.jacoco.version}</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>report</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
                 <plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>${maven.javadoc.version}</version>
 					<executions>
 						<execution>
 					 		<id>attach-javadocs</id>
@@ -243,7 +146,6 @@
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.7</version>
                 <extensions>true</extensions>
                 <configuration>
                     <serverId>ossrh</serverId>
@@ -254,7 +156,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>${maven.jar.plugin.version}</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -271,7 +172,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>${maven.war.plugin.version}</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -288,7 +188,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -301,7 +200,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.5</version>
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
@@ -321,7 +219,6 @@
             <plugin>
                 <groupId>pl.project13.maven</groupId>
                 <artifactId>git-commit-id-plugin</artifactId>
-                <version>3.0.1</version>
                 <executions>
                     <execution>
                         <id>get-the-git-infos</id>
@@ -333,8 +230,7 @@
                 </executions>
                 <configuration>
                     <generateGitPropertiesFile>true</generateGitPropertiesFile>
-                    <generateGitPropertiesFilename>${project.build.outputDirectory}/service-git.properties
-                    </generateGitPropertiesFilename>
+                    <generateGitPropertiesFilename>git.properties</generateGitPropertiesFilename>
                     <includeOnlyProperties>
                         <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
                         <includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
@@ -347,8 +243,10 @@
             <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven.compiler.version}</version>
 				<configuration>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
 				</configuration>
